<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/user_reg"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_head" />

    <EditText
        android:id="@+id/user_ph"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/ph"
        android:inputType="phone"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <EditText
        android:id="@+id/user_mail"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_ph" />

    <EditText
        android:id="@+id/prof"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/prof"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_mail" />

    <TextView
        android:id="@+id/reg_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/reg_page"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_next" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_reg" />


</androidx.constraintlayout.widget.ConstraintLayout>