<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Login">

    <EditText
        android:id="@+id/user_log"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/roundable_edittext"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_head" />

    <Button
        android:id="@+id/button_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_reg"
        android:text="@string/LOGIN"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_log" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_log" />

    <EditText
        android:id="@+id/password_log"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/roundable_edittext"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_log" />

    <TextView
        android:id="@+id/log_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/coiny"
        android:text="@string/sign_title"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>